[package]
name = "rprompt"
version = "1.0.5"
authors = ["Conrad Kleinespel <conradk@conradk.com>"]
description = "Prompt user input in console applications."
license = "Apache-2.0"
homepage = "https://github.com/conradkleinespel/rprompt"
repository = "https://github.com/conradkleinespel/rprompt"
documentation = "https://docs.rs/rprompt/"
readme = "README.md"
keywords = ["prompt", "readline"]
edition = "2018"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std", "winnt", "fileapi", "processenv", "winbase", "handleapi", "consoleapi", "minwindef", "wincon"] }
