[package]
name = "rprompt"
version = "2.1.1"
authors = ["Conrad Kleinespel <conradk@conradk.com>"]
description = "Prompt user input in console applications."
license = "Apache-2.0"
homepage = "https://github.com/conradkleinespel/rprompt"
repository = "https://github.com/conradkleinespel/rprompt"
documentation = "https://docs.rs/rprompt/"
readme = "README.md"
keywords = ["prompt", "readline"]
edition = "2018"

[dependencies]
rtoolbox = { path = "../rtoolbox", version = "0.0" }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48"
features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Console", "Win32_System_SystemServices"]
